Fixed SonarLint issues.